--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,14 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<key>NSBluetoothAlwaysUsageDescription</key>
+        <string>需要藍牙權限以連接血糖測量裝置</string>
+
+        <key>NSBluetoothPeripheralUsageDescription</key>
+        <string>需要藍牙權限以連接血糖測量裝置</string>
+
+        <key>NSLocationWhenInUseUsageDescription</key>
+        <string>需要位置權限以掃描藍牙裝置</string>
 </dict>
 </plist>
