--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,12 +47,15 @@
 	<true/>
 
 	<key>NSBluetoothAlwaysUsageDescription</key>
-        <string>需要藍牙權限以連接血糖測量裝置</string>
+    <string>需要藍牙權限以連接血糖測量裝置</string>
 
-        <key>NSBluetoothPeripheralUsageDescription</key>
-        <string>需要藍牙權限以連接血糖測量裝置</string>
+    <key>NSBluetoothPeripheralUsageDescription</key>
+    <string>需要藍牙權限以連接血糖測量裝置</string>
 
-        <key>NSLocationWhenInUseUsageDescription</key>
-        <string>需要位置權限以掃描藍牙裝置</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>需要位置權限以掃描藍牙裝置</string>
+
+    <key>NSCameraUsageDescription</key>
+    <string>需要相機權限以掃描 QR Code</string>
 </dict>
 </plist>
