--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   workmanager: ^0.9.0+3
   flutter_foreground_task: ^6.4.0
   connectivity_plus: ^6.0.5
+  mobile_scanner: ^5.2.3
+  shared_preferences: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
