--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,21 +38,12 @@ dependencies:
   permission_handler: ^12.0.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
-#  isar:
-#    hosted:
-#      name: isar
-#      url: https://pub.isar-community.dev/
-#    version: ^3.1.0+2
-#  isar_flutter_libs:
-#    hosted:
-#      name: isar_flutter_libs
-#      url: https://pub.isar-community.dev/
-#    version: ^3.1.0+2
   path_provider: ^2.1.4
   collection: ^1.18.0
   connectivity_plus: ^6.0.5
   mobile_scanner: ^5.2.3
   shared_preferences: ^2.2.2
+  wakelock_plus: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,11 +53,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-#  isar_generator:
-#    hosted:
-#      name: isar_generator
-#      url: https://pub.isar-community.dev/
-#    version: ^3.1.0+2
   isar_generator: ^3.1.0+1
   build_runner: any
 
